- Style: improve contrast of ESR acl label and unify ACL colors - Fix BrowserCtrl when trying to browse a resource with a restricted root collection

--- a/src/main/webapp/static/app/styles/less/browser.less
+++ b/src/main/webapp/static/app/styles/less/browser.less
@@ -474,13 +474,13 @@ table.table-workspace-elements {
             display: none;
           }
           &.authentified {
-            background-color: @label-primary-bg;
+            background-color: @acl-authentified;
           }
           &.esr {
-            background-color: @label-warning-bg;
+            background-color: @acl-esr;
           }
           &.restricted {
-            background-color: @label-danger-bg;
+            background-color: @acl-restricted;
           }
         }
       }
