--- a/src/main/webapp/static/app/styles/less/common.less
+++ b/src/main/webapp/static/app/styles/less/common.less
@@ -260,3 +260,19 @@ button.no-border {
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
+.label.label-for-all {
+  background-color: @acl-for-all;
+}
+
+.label.label-authentified {
+  background-color: @acl-authentified;
+}
+
+.label.label-esr {
+  background-color: @acl-esr;
+}
+
+.label.label-restricted {
+  background-color: @acl-restricted;
+}
