--- a/src/main/webapp/static/app/styles/less/tree.less
+++ b/src/main/webapp/static/app/styles/less/tree.less
@@ -12,20 +12,20 @@
     margin: @padding-large-vertical 0;
     padding: @padding-base-vertical @padding-base-horizontal @padding-base-vertical @padding-large-horizontal;
     cursor: default;
-    &.collection {
+    &.collection:not(.root-collection) {
       cursor: pointer;
     }
     &.forall {
-      border-left-color: @btn-success-bg;
+      border-left-color: @acl-for-all;
     }
     &.authentified {
-      border-left-color: @ortolang-blue;
+      border-left-color: @acl-authentified;
     }
     &.esr {
-      border-left-color: @dark-yellow;
+      border-left-color: @acl-esr;
     }
     &.restricted {
-      border-left-color: @red;
+      border-left-color: @acl-restricted;
     }
     .node-body {
       flex: 1 0 0%;
@@ -71,6 +71,15 @@
     }
   }
   .options {
+    margin-bottom: @line-height-computed;
+  }
+}
+
+.acl-legend-modal {
+  ul li {
+    &:first-child {
+      margin-top: @line-height-computed;
+    }
     margin-bottom: @line-height-computed;
   }
 }
