--- a/src/main/webapp/static/app/styles/less/variables.less
+++ b/src/main/webapp/static/app/styles/less/variables.less
@@ -46,7 +46,6 @@
 @text-color: @gray-dark;
 @inverse-text-color: @white;
 
-
 @market-primary: @ortolang-blue;
 @tool-primary: @green;
 @integrated-projects-primary: @green;
@@ -61,6 +60,13 @@
 
 @profile-primary: @green;
 @information-primary: @green;
+
+// ACL
+@acl-for-all: @brand-success;
+@acl-authentified: @ortolang-blue;
+@acl-esr: darken(@yellow, 7%);
+//@acl-esr: darken(@brand-warning, 10%);
+@acl-restricted: @red;
 
 //== Buttons
 //
